added user feedback after send a message

--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -46,11 +46,15 @@
                 <span>{{ 'CONTACT.ACCEPT_PRIVACY' | translate }}</span>
                 }
                 <br><br>
+                <div @if(feedbackMessage) class="feedback-message">
+                    {{ feedbackMessage }}
+                </div>
 
                 <button class="send-button" type="submit"
                     [ngClass]="{'inactive': !contactForm.valid || !contactData.acceptPolicy}">
                     {{ buttonText }}
                 </button> <br><br><br><br><br>
+
                 <a href="#header"> <img class="arrow-top-icon" src="./../../../assets/img/arrow-top-icon.png"
                         alt="Arrow top">
                 </a>
