styled feedback message

--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -45,15 +45,15 @@
                 @if((privacy.touched || submitted) && !contactData.acceptPolicy) {
                 <span>{{ 'CONTACT.ACCEPT_PRIVACY' | translate }}</span>
                 }
-                <br><br>
+         
                 <div @if(feedbackMessage) class="feedback-message">
                     {{ feedbackMessage }}
-                </div>
+                </div> 
 
                 <button class="send-button" type="submit"
                     [ngClass]="{'inactive': !contactForm.valid || !contactData.acceptPolicy}">
                     {{ buttonText }}
-                </button> <br><br><br><br><br>
+                </button> 
 
                 <a href="#header"> <img class="arrow-top-icon" src="./../../../assets/img/arrow-top-icon.png"
                         alt="Arrow top">
