--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -154,6 +154,11 @@ a {
     }
 }
 
+.feedback-message {
+    color:  #5988FF;
+    font-family: 'Montserrat';
+}
+
 @media (max-width:1605px) {
     button {
         margin-top: 20px !important;
