fixed feedbackmessage style

--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -157,6 +157,8 @@ a {
 .feedback-message {
     color:  #5988FF;
     font-family: 'Montserrat';
+    min-height: 30px;
+    margin-top: 2%;
 }
 
 @media (max-width:1605px) {
