--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,8 @@
     background-color: white;
     cursor: pointer;
     font-size: 23px;
+    margin-top: 5%;
+    margin-bottom: 15%;
 
     &:hover {
             background-color: #5988FF;
