--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -155,10 +155,18 @@ a {
 }
 
 .feedback-message {
-    color:  #5988FF;
+    color: white;
     font-family: 'Montserrat';
-    min-height: 30px;
-    margin-top: 2%;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    display: flex;
+    height: 20vh;
+    width: 100%;
+    z-index: 1000;
+    background: linear-gradient(to right, #0043F0, #5988FF);
 }
 
 @media (max-width:800px) {
