fixed the checkbox position to baseline

--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -136,6 +136,11 @@ label {
     font-family: 'Montserrat';
 }
 
+.checkbox-wrapper {
+    display: flex;
+    align-items: baseline;
+}
+
 a {
     color: #5988FF;
     text-decoration: none;
