--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -43,7 +43,7 @@
                 </div>
 
                 @if((privacy.touched || submitted) && !contactData.acceptPolicy) {
-                <span>{{ 'CONTACT.ACCEPT_PRIVACY' | translate }}</span>
+                <span class="accept-policy-warning-span">{{ 'CONTACT.ACCEPT_PRIVACY' | translate }}</span>
                 }
 
                 <button class="send-button" type="submit"
