--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -164,18 +164,24 @@ a {
 }
 
 .feedback-message {
-    color: white;
-    font-family: 'Montserrat';
-    position: absolute;
+    position: fixed;
     justify-content: center;
     align-items: center;
     top: 0;
     left: 0;
     display: flex;
-    height: 20vh;
+    height: 30vh;
     width: 100%;
     z-index: 1000;
     background: linear-gradient(to right, #0043F0, #5988FF);
+    text-align: center;
+
+    span {
+        color: white;
+        font-family: 'Montserrat';
+        margin-left: 2%;
+        margin-right: 2%;
+    }
 }
 
 @media (max-width:800px) {
