adjusted the image size on header component

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header id="header">
     <section>
         <div>
-            <a href="/"><img src="./../../../../assets/img/logo.png" alt="Logo"></a>
+            <a href="/"><img class="logo" src="./../../../../assets/img/logo.png" alt="Logo"></a>
         </div>
         <nav>
             <a href="#about-me">{{ 'HEADER.ABOUT_ME' | translate }}</a>
