--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -91,10 +91,29 @@ nav {
     z-index: 1000; 
     flex-direction: column;
     align-items: center;
-    justify-content: center; 
     transition: transform 0.3s ease; 
     transform: translateX(-100%);
-}
+
+    a,
+    span {
+        font-family: 'Montserrat';
+        padding: 10px;
+        font-size: 1.4375rem;
+        color: #5988FF;
+        text-decoration: none;
+        cursor: pointer;
+    
+        &:hover {
+            text-decoration:underline;
+        }
+    }
+    
+    .translation-section {
+        display: flex;
+        align-items: center;
+    }
+    }
+    
 
 .open {
     display: flex;
@@ -106,7 +125,7 @@ nav {
 }
 
 
-@media(max-width:760px) {
+@media(max-width:787px) {
     nav {
         display: none;
     }
