--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -87,8 +87,9 @@ nav {
     left: 0;
     width: 100%;
     height: 100%;
-    background: white; 
+    background: linear-gradient(to bottom, #FFFFFF, #EAF0FF); 
     z-index: 1000; 
+    padding-top: 20%;
     flex-direction: column;
     align-items: center;
     transition: transform 0.3s ease; 
