added scrollbar styling

--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -78,7 +78,7 @@
                 06577 Oberheldrungen <br />
             </p>
             <p>
-                Telefon: 015227783633 <br />
+                Telefon: 0172 2594032 <br />
                 E-Mail: galina.antipin&#64;gmail.com
             </p> <br>
             Verantwortliche Stelle ist die natürliche oder juristische Person, die
