--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -16,7 +16,7 @@
             </div>
         </div>
 
-        <div [ngClass]="{'open': isMenuOpen}" class="hamburger-menu">
+        <div [ngClass]="isMenuActive()" class="hamburger-menu">
             <a href="#about-me" (click)="closeMenu()">{{ 'MENU.ABOUT_ME' | translate }}</a>
             <a href="#skills" (click)="closeMenu()">{{ 'MENU.SKILLS' | translate }}</a>
             <a href="#my-work" (click)="closeMenu()">{{ 'MENU.MY_WORK' | translate }}</a>
