--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -72,28 +72,29 @@ nav {
 .hamburger-icon img {
     width: 35px;
 
-&:hover {
-    cursor: pointer;
-}}
+    &:hover {
+        cursor: pointer;
+    }
+}
 
 .responsive-menu {
     display: none;
 }
 
 .hamburger-menu {
-    display: none;
     position: fixed;
     top: 100px;
-    left: 0;
+    right: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom, #FFFFFF, #EAF0FF); 
-    z-index: 1000; 
+    background: linear-gradient(to bottom, #FFFFFF, #EAF0FF);
+    z-index: 1000;
     padding-top: 20%;
+    display: flex;
     flex-direction: column;
     align-items: center;
-    transition: transform 0.3s ease; 
-    transform: translateX(-100%);
+    transform: translateX(100%);
+    transition: transform 0.3s ease;
 
     a,
     span {
@@ -103,26 +104,20 @@ nav {
         color: #5988FF;
         text-decoration: none;
         cursor: pointer;
-    
+
         &:hover {
-            text-decoration:underline;
+            text-decoration: underline;
         }
     }
-    
+
     .translation-section {
         display: flex;
         align-items: center;
     }
-    }
-    
-
-.open {
-    display: flex;
-    transform: translateX(0);
 }
 
-.closed {
-    transform: translateX(100%);
+.open {
+    transform: translateX(0); 
 }
 
 
@@ -134,5 +129,4 @@ nav {
     .responsive-menu {
         display: block;
     }
-
 }
