edited skills h1 in media querry

--- a/src/app/main-content/skills/skills.component.scss
+++ b/src/app/main-content/skills/skills.component.scss
@@ -80,6 +80,10 @@ span {
     .img-wrapper {
         width: 100px;
     }
+
+    h1 {
+        font-size: 4.5rem;
+    }
 }
 
 @media (max-width:368px) {
