--- a/src/app/main-content/my-work/my-work.component.html
+++ b/src/app/main-content/my-work/my-work.component.html
@@ -11,8 +11,8 @@
                 <h3>{{ project.technologies }}</h3>
                 <span>{{ 'WORK.PROJECT.DESCRIPTION.' + project.id | translate }}</span>
                 <div class="button-section">
-                    <a [href]="project.liveLink" target="_blank" class="test-button">
-                        <button class="primary-button">{{ 'WORK.PROJECT.LIVE_TEST' | translate }}</button>
+                    <a [href]="project.liveLink" target="_blank">
+                        <button class="test-button">{{ 'WORK.PROJECT.LIVE_TEST' | translate }}</button>
                     </a>
                     <div class="space-between"></div>
                     <a [href]="project.githubLink" target="_blank" class="github-button">
