--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -15,11 +15,13 @@
                     rel="noopener noreferrer">
                     <img src='./../../../../assets/img/linkedin-icon-white.png' alt="LinkedIn" />
                 </a>
-                <a href="mailto:galina.antipin@gmail.com?subject=Kontaktanfrage&body=Hier deine Nachricht eingeben..." >
+                <a href="mailto:galina.antipin@gmail.com?subject=Kontaktanfrage&body=Hier deine Nachricht eingeben...">
                     <img src='./../../../../assets/img/mail-icon-white.png' alt="Email" />
                 </a>
             </div>
         </div>
-        <a routerLink="imprint">{{ 'FOOTER.IMPRINT' | translate }}</a>
+        <div class="footer-bottom">
+            <a routerLink="imprint">{{ 'FOOTER.IMPRINT' | translate }}</a>
+        </div>
     </div>
 </footer>
