--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -93,6 +93,8 @@ p {
 
     .logo {
         width: 100px;
+        margin-bottom: -20px;
+        margin-top: -20px;
     }
 
     .footer-bottom a {
