--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -17,7 +17,8 @@ h2 {
     color: #5988FF;
     font-family: 'Baloo 2';
     font-size: 2.375rem;
-    margin-bottom: 2%;
+    margin-bottom: 10%;
+    margin-top: 10%;
 }
 
 button {
@@ -70,6 +71,7 @@ button {
     width: 60%;
     display: flex;
     flex-direction: column;
+    margin-top: 2%;
 }
 
 img {
@@ -157,13 +159,19 @@ span {
     .right-content {
         display: flex;
         justify-content: center;
-        margin-top: 40px;
+        margin-top: 2%;
     }
 
     button {
         margin-top: 30px;
         margin-bottom: 30px;
     }
+
+    h2 {
+        margin-bottom: 2%;
+        margin-top: 5%;
+    }
+    
 }
 
 @media(max-width: 730px) {
