adjusted the height of the landing page by a media querry of 410px

--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -354,6 +354,11 @@ span {
 }
 
 @media(max-width:410px) {
+
+    section {
+        height: calc(80vh - 100px);
+    }
+    
     .left-content {
 
         img {
