changed my email in footer section

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -15,7 +15,7 @@
                     rel="noopener noreferrer">
                     <img src='./../../../../assets/img/linkedin-icon-white.png' alt="LinkedIn" />
                 </a>
-                <a href="mailto:galina.antipin@gmail.com?subject=Kontaktanfrage&body=Hier deine Nachricht eingeben...">
+                <a href="mailto:mail@galina-antipin.de?subject=Kontaktanfrage&body=Hier deine Nachricht eingeben...">
                     <img src='./../../../../assets/img/mail-icon-white.png' alt="Email" />
                 </a>
             </div>
